<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>it.mulders.modern-rpc</groupId>
    <artifactId>modern-rpc</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Modern RPC</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>16</maven.compiler.release>

        <junit.jupiter.version>5.7.2</junit.jupiter.version>
    </properties>

    <modules>
        <module>shared/core</module>
        <module>shared/rmi</module>
        <module>shared/soap</module>
        <module>shared/rest</module>
        <module>shared/grpc</module>

        <module>server/core</module>
        <module>server/rmi</module>
        <module>server/soap</module>
        <module>server/rest</module>
        <module>server/grpc</module>
        <module>server/assembly</module>

        <module>client/shared</module>
        <module>client/rmi</module>
        <module>client/soap</module>
        <module>client/rest</module>
        <module>client/grpc</module>
        <module>client/assembly</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.jupiter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.20.1</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>shared-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>shared-rmi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>shared-soap</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>shared-rest</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>shared-grpc</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>server-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>server-rmi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>server-soap</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>server-rest</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>server-grpc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>server-assembly</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>client-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>client-shared</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>client-rmi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>client-soap</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>client-rest</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.mulders.modern-rpc</groupId>
                <artifactId>client-grpc</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.31</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.2.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <argLine>--add-opens fibonacci.server.core/it.mulders.modernrpc.server.core=ALL-UNNAMED</argLine>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.junit.jupiter</groupId>
                            <artifactId>junit-jupiter-engine</artifactId>
                            <version>${junit.jupiter.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>